<resources>
    <string name="app_name" translatable="false">Forthgreen</string>
    <string name="dialog" translatable="false">dialog</string>
    <string name="auto_fill_key_name" translatable="false">name</string>
    <string name="auto_fill_key_password" translatable="false">password</string>
    <string name="auto_fill_key_phone" translatable="false">phone</string>
    <string name="auto_fill_key_dob" translatable="false">dob</string>
    <string name="firestore_conversation_key" translatable="false">conversations</string>
    <string name="google_web_client_id" translatable="false">700251019899-e0n4tj7115psn1vumbufh1aftc2mtk54.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">265398044612544</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb265398044612544</string>
    <string name="contact_us_email" translatable="false">info@forthgreen.com</string>
    <string name="restaurant_suggest_email" translatable="false">restaurants@forthgreen.com</string>
    <string name="google_maps_key" translatable="false">AIzaSyBCb3dhtBh7DTZbN2hZIq2CaZBUXvuOKds</string>
    <string name="google_places_key" translatable="false">AIzaSyDFJT7LvKJQQrwBOm0tTPHrasgy2TOY40U</string>
    <string name="date_picker">Date Picker</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="retrofit_failure">There might be some problem please try again later.</string>
    <string name="hint_search">Search…</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="storage_permission_needed">You need to grant read/write external         storage permission in order to access media.</string>
    <string name="camera_permission_needed">You need to allow camera permission
        in order to capture photos.</string>
    <string name="contacts_permission_needed">You need to grant read contacts permission in order to Sync all your contacts.</string>
    <string name="record_audio_permission_needed">You need to allow record audio permission
        in order to record dialogs.</string>
    <string name="enable_storage_permission">You should enable your storage permission         in the settings for better experience.</string>
    <string name="enable_read_contacts_permission">You should enable your read contacts permission         in the settings for better experience.</string>
    <string name="no_more_data">No more data found.</string>
    <string name="location_permission_needed">You need to grant location permission in order to get your present location</string>
    <string name="launch_activity" translatable="false">Launch Activity</string>
    <string name="take_video">Video</string>
    <string name="pick_video">Take Video</string>
    <string name="take_still_photo">Photo</string>
    <string name="open_image_gallery">Image Gallery</string>
    <string name="open_video_gallery">Video Gallery</string>
    <string name="invalid_mobile_error">Please enter your Mobile Number.</string>
    <string name="invalid_password_error">Please make sure the password is valid.</string>
    <string name="empty_field_error">This field cannot be empty.</string>
    <string name="invalid_username_email_error">Please enter a valid Username/Email.</string>
    <string name="invalid_email_error">Please enter a valid Email.</string>
    <string name="signup_password_error">Please enter a valid password with minimum 6 characters.</string>
    <string name="try_again_later_error">Please try again later.</string>
    <string name="password_match_error">The Password entered must match the Confirm Password entered.</string>
    <string name="no_data_to_show">Nothing to show here.</string>
    <string name="no_data_to_show_other_users">Follow other users\nand see their updates here.</string>
    <string name="data_update_success">Data updated successfully.</string>
    <string name="grant_permissions_error">You need to grant the permission to continue.</string>
    <string name="website_not_available_error">Website not available.</string>
    <string name="no_products_found_message">There is no results. Please try another search.</string>
    <string name="select_country_code">Code</string>
    <string name="select_country">Country</string>
    <string name="fragment_title_country_code">Select Country Code</string>
    <string name="empty_country_code">Please Select country code.</string>
    <string name="empty_phone_no">Please enter your phone number.</string>
    <string name="empty_otp">Please enter OTP code.</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm new Password</string>
    <string name="empty_old_password">Please enter your old password.</string>
    <string name="empty_new_password">Please enter your new password.</string>
    <string name="invalid_new_password">Your new password should contain 6–15 characters.</string>
    <string name="password_not_matched">Your password didn\'t match.</string>
    <string name="password_updated">Password Updated</string>
    <string name="update_success">Update Successfully</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="join_forthgreen_label">Join Forthgreen</string>
    <string name="join_desc_label">Create an account, join the community and discover hundreds of brands and restaurants all Vegan &amp; Cruelty-Free.</string>
    <string name="facebook_sign_up">Sign Up with Facebook</string>
    <string name="google_sign_up">Sign up with Google</string>
    <string name="email_sign_up">Sign up with Email</string>
    <string name="have_an_account">Do you have an account?</string>
    <string name="login_spannable">LOGIN</string>
    <string name="login">Login</string>
    <string name="login_as_guest">CONTINUE AS A GUEST</string>
    <string name="terms">By signing up you agree our \nTerms &amp; Conditions and Private Policy</string>
    <string name="term_spannable">Terms &amp; Conditions</string>
    <string name="privacy_spannable">Private Policy</string>
    <string name="or">Or</string>
    <string name="continue_with_facebook_btn">Continue with Facebook</string>
    <string name="continue_with_google_btn">Continue with Google</string>
    <string name="continue_with_email_btn">Continue with email</string>
    <string name="continue_with_email_label">Continue with email</string>
    <string name="login_fragment">Login</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="create_password_label">Create Password</string>
    <string name="forget">Forgotten password?</string>
    <string name="forgot">We\'ll email you a link to reset your password </string>
    <string name="hint_email">Email</string>
    <string name="request_new">Request new password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="toolbar_new_password">New password</string>
    <string name="new_tag">New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="btn_save">Save</string>
    <string name="sign_up_label">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="email_tag">Email</string>
    <string name="password_tag">Password</string>
    <string name="user_name_optional">User name (optional)</string>
    <string name="confirm_tag">Confirm password</string>
    <string name="gender_tag">Gender</string>
    <string name="dob_tag">Date of birth</string>
    <string name="terms_tag">By signing up you agree our \nTerms \u0026 Conditions and Private Policy</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="other_label">Other</string>
    <string name="verification_title_dialog">Verification</string>
    <string name="verify_message_dialog">An email has been sent to your inbox for verification.</string>
    <string name="skip_label">Skip</string>
    <string name="next_label">Next</string>
    <string name="boarding_title_one_label">Vegan Community</string>
    <string name="boarding_desc_one">Join the Forthgreen community to share and connect with others, follow, post and much more!</string>
    <string name="boarding_title_two_label">Vegan Brands</string>
    <string name="boarding_desc_two">Cruelty-free foods, cosmetics, fashion, we’ve got it all. Simply browse, select, and shop on the brand’s website.</string>
    <string name="boarding_title_three_label">Vegan Restaurants</string>
    <string name="boarding_desc_three">Discover the best vegan restaurants in your location. You can follow, rate and share Restaurants with friends.</string>
    <string name="boarding_title_four_label">Good for the Animals</string>
    <string name="boarding_desc_four">Our carefully curated list showcases companies that are truly devoted to the ethos of veganism and cruelty-free.</string>
    <string name="toolbar_title">forthgreen</string>
    <string name="brand_view_more">ALL</string>
    <string name="tool_title">Brands</string>
    <string name="frag_filter_title">Categories</string>
    <string name="btn_view_products">View Products</string>
    <string name="btn_view_restaurants">View Restaurants</string>
    <string name="btn_view_brands">View Brands</string>
    <string name="search_hint">Search…</string>
    <string name="search_cancel">Cancel</string>
    <string name="no_query_result">Nothing matches your search. Please try again.</string>
    <string name="no_data_text">Nothing matches your search.\nPlease try again</string>
    <string name="save">SAVE</string>
    <string name="saved">UNSAVE</string>
    <string name="follow">Follow</string>
    <string name="follow_brand">Following</string>
    <string name="website">Website</string>
    <string name="view_more">View More</string>
    <string name="see_more">…see more</string>
    <string name="load_more_label">Load More</string>
    <string name="report_brand">Report</string>
    <string name="share_brand">Share to…</string>
    <string name="ok_label">Ok</string>
    <string name="cancel_menu">Cancel</string>
    <string name="signUp_to_follow">Sign up to follow brands</string>
    <string name="report_review">Report</string>
    <string name="review_abuse">If you find this content inappropriate and think it should be removed from the Forthgreen app, let us know by clicking the button below.</string>
    <string name="btn_back_product">Back to Product</string>
    <string name="btn_back_restaurant">Back to Restaurant</string>
    <string name="report_review_sent">Thank you for your feedback.\nWe appreciate your vote. </string>
    <string name="my_brands_title">My Brands</string>
    <string name="no_brands_followed_message">You haven\'t saved any brands yet.</string>
    <string name="btn_report">Report</string>
    <string name="about_us_label">About Us</string>
    <string name="leave_feedback_label">Leave Feedback</string>
    <string name="email_label">Email</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="terms_label">Terms &amp; Conditions</string>
    <string name="privacy_and_policy_label">Privacy and Policy</string>
    <string name="logout_label">Logout</string>
    <string name="delete_account_label">Delete Account</string>
</resources>